VERSION 0.22 (2018-01-19)
  * R version can be enforced then building docker zip/image

VERSION 0.21 (2018-01-17)
  * MSI does not prompt for reboot any more
  * 'rsuite install' has option to install also packages required
    to use RStudio plug-ins
  * MSI is properly signed

VERSION 0.20 (2017-12-08)
  * 'proj build' has option to force rebuild packages.
  * rsuite.cmd references internal scripts by short name. Long names caused
     issues on some Win10.

VERSION 0.19 (2017-11-23)
  * repo command fixed to create local repository folder if does not exist.
  * 'proj build' has option to build binary project packages.
  * 'repo addgithub' andd 'pkgzip github' have options to skip some building
     steps (like documentation generation). It makes sens for some faulty packages
     like Microsoft/LightGBM with invalid rogyxen declarations but proper NAMESPACE.
  * 'repo list' for empty repositories fixed not to raise error.

VERSION 0.18 (2017-11-13)
  * 'docker zip/img' can specified sh command to be executed before project
     building.
  * Multiple folders can be specified to add to image context while running
     'docker img'

VERSION 0.17 (2017-11-11)
  * docker command can deploy project partially. It also can user dockerfile
     template to deploy project among other image setup commands.

VERSION 0.16 (2017-11-08)
  * 'proj pack' added which exposes RSuite::prj_path functionality.
  * docker command added which enables build zip in docker container and create
     docker image with deployed project. It's simplistic yet and will need
     to be extended.

VERSION 0.15 (2017-11-04)
  * added --with-deps and --filter-repo options which are supported from v0.15
    of RSuite

VERSION 0.14 (2017-10-30)
  * detection of R path out of registry on windows fixed
  * tests fixed to test in project rsuite cli
  * 'rsuite proj test' sub-command added to run tests under CI

VERSION 0.13 (2017-10-23)