@@ -1,4 +1,5 @@
 rsuite usr/bin
 {rsuite.sh,version.txt} usr/share/rsuitecli
+rsuite-bash-propmt etc/bash_completion.d/rsuite-bash-propmt
 R/*.R usr/share/rsuitecli/R
 R/packages/src/contrib/{PACKAGES,*.gz} usr/share/rsuitecli/R/packages/src/contrib/
