@@ -23,7 +23,7 @@ cp -R ${base_dir}/../R ${orig_dir}
 cp ${base_dir}/../rsuite ${orig_dir}/rsuite.sh
 echo -e "#!/bin/bash\n/usr/share/rsuitecli/rsuite.sh \$*\n" > ${orig_dir}/rsuite
 echo -n $ver > ${orig_dir}/version.txt
-chmod +x ${orig_dir}/{rsuite.sh,rsuite}
+chmod +x ${orig_dir}/{rsuite.sh,rsuite,rsuite-bash-prompt}
 chmod -x ${orig_dir}/R/*.R
 
 mkdir -p ${build_dir}/rpmbuild/{SOURCES,SPECS}
