@@ -30,6 +30,7 @@ package repositories.
 mkdir -p %{buildroot}/usr/share/rsuitecli
 install -m 755 rsuite.sh %{buildroot}/usr/share/rsuitecli/rsuite.sh
 install -m 644 version.txt %{buildroot}/usr/share/rsuitecli/version.txt
+install -m 755 rsuite-bash-prompt %{buildroot}/etc/bash_completion.d/rsuite-bash-prompt
 cp -R R %{buildroot}/usr/share/rsuitecli/
 
 mkdir -p %{buildroot}/usr/bin
@@ -55,3 +56,4 @@ install -m 755 rsuite %{buildroot}/usr/bin/rsuite
 /usr/share/rsuitecli/R/packages/src/contrib/optparse_1.4.4.tar.gz
 /usr/share/rsuitecli/R/packages/src/contrib/PACKAGES
 /usr/share/rsuitecli/R/packages/src/contrib/PACKAGES.gz
+/etc/bash_completion.d/rsuite-bash-prompt
