@@ -1,5 +1,6 @@
 VERSION 0.22 (2018-01-19)
   * R version can be enforced then building docker zip/image
+  * For linux bash_completions added.
 
 VERSION 0.21 (2018-01-17)
   * MSI does not prompt for reboot any more
